--- a/english/iep/css/style.css
+++ b/english/iep/css/style.css
@@ -47,11 +47,23 @@ html, body {
   color: white;
 }
 
+.thumbnail img {
+  -moz-transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.thumbnail:hover img {
+  moz-transform: scale(2);
+  -webkit-transform: scale(2);
+  transform: scale(2);
+}
+
 div.worksCited {
   color: white;
   -webkit-column-count: 3; /* Chrome, Safari, Opera */
   -moz-column-count: 3; /* Firefox */
   column-count: 3;
+  margin-bottom: 50px;
 }
 .worksCited > ol > li{
   color: white;
